testing prior to implement pulse
